chore: add deprecatedSeries in classes and depreciation methods